MFG Ready Version/force-app/main/default/objects/mfg_Agreement_Product__c/mfg_Agreement_Product__c.object-meta.xml
<CustomObject>
    <label>Agreement Product</label>
    <nameField>
        <label>Agreement Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>