MFG Ready Version/force-app/main/default/objects/mfg_Agreement_Product__c/fields/mfg_Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Delivered_Quantity__c</fullName>
    <label>Delivered Quantity</label>
    <summarizedField>mfg_Agreement_Product_Schedule__c.mfg_Actual_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>mfg_Agreement_Product_Schedule__c.mfg_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>mfg_Agreement_Product_Schedule__c.mfg_Agreement_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>