MFG Ready Version/force-app/main/default/objects/mfg_Agreement_Product__c/fields/mfg_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Agreement Products</relationshipLabel>
    <relationshipName>Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>