MFG Ready Version/force-app/main/default/objects/mfg_Agreement_Product__c/fields/mfg_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>mfg_Sales_Price__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>