MFG Ready Version/force-app/main/default/objects/mfg_Agreement_Product__c/fields/mfg_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Amount__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(mfg_Sales_Price__c),
    ISBLANK(mfg_Total_Quantity__c)
  ),
  0,
  mfg_Sales_Price__c * mfg_Total_Quantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>